Upgrade to Spring Boot 4.0 and RestTestClient